--- a/Express_online_shop_mongo/package.json
+++ b/Express_online_shop_mongo/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^3.1.10",
     "nodemon": "^1.18.6",
     "pug": "^2.0.3"
   },
