--- a/Express_online_shop_mongoose/package.json
+++ b/Express_online_shop_mongoose/package.json
@@ -10,6 +10,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.10",
+    "mongoose": "^5.4.8",
     "nodemon": "^1.18.6",
     "pug": "^2.0.3"
   },
