--- a/Express_online_shop_mongoose/package.json
+++ b/Express_online_shop_mongoose/package.json
@@ -15,6 +15,8 @@
     "express-session": "^1.15.6",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.8",
+    "nodemailer": "^5.1.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.18.6",
     "pug": "^2.0.3"
   },
