--- a/Express_online_shop_mongoose/package.json
+++ b/Express_online_shop_mongoose/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^5.3.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.8",
+    "multer": "^1.4.1",
     "nodemailer": "^5.1.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.18.6",
