--- a/Express_online_shop_mongoose/package.json
+++ b/Express_online_shop_mongoose/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^5.1.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.18.6",
+    "pdfkit": "^0.9.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {},
